# mate

./: .clang-format  .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  README.md  build.sh  build_backend.py  build_utils.py  format.sh  pyproject.toml  setup.py
benchmarks/: bench_flash_attn.py  bench_flash_attn_config.py  bench_gdn_decode.py  bench_gdn_mtp.py  bench_gdn_prefill.py  bench_groupwise_gemm_fp8_mp31.py  bench_hash_topk.py  bench_hyperconnection_mhc.py  bench_mla_decode.py  bench_moe_fused_gate.py  bench_sparse_mla.py  bench_utils.py
csrc/: asm_common.hpp  attention_combine.hpp  attention_combine.mu  attention_scheduler.hpp  attention_scheduler.mu  batch_gemm.mu  batch_gemm_fp8.mu  deepgemm_attention.mu  dtype_utils.hpp  flash.hpp  flash_atten_asm.mu  flash_atten_bwd.mu  flash_fwd_launch_template.hpp  flash_mla_asm.mu  fmha_pybind.mu  gemm_common_utils.hpp  gemm_fp8_groupwise.mu  gemm_mudnn_utils.hpp  generate_kernels.py  mate_utils.hpp  mate_utils.muh  mla_pybind.mu  moe_fused_gate.mu  moe_gemm_8bit.mu  moe_gemm_asm.mu  mudnn_utils.hpp  op_utils.hpp  sage_attention_asm.mu  static_switch.hpp  torch_bindings.cpp  torch_utils.hpp  tvm_ffi_utils.hpp
csrc/mubin/mp31/: mp31_flash_atten_mubin.hpp  mp31_flash_atten_registry.hpp  mp31_flash_mla_mubin.hpp  mp31_flash_mla_registry.hpp  mp31_gemm_mubin.hpp  mp31_moe_gemm_8bit_registry.hpp  mp31_sage_attention_mubin.hpp  mp31_sage_attention_registry.hpp
csrc/mubin/mp31/flash_atten/: bf16tce_flash_atten_512_256x128x128_causal_persistence.cpp  bf16tce_flash_atten_512_256x128x128_persistence.cpp  bf16tce_flash_atten_512_256x128x128_varlen.cpp  bf16tce_flash_atten_512_256x128x128_varlen_causal.cpp  bf16tce_flash_atten_512_256x64_192_128_causal_persistence.cpp  bf16tce_flash_atten_512_256x64_192_128_nomask_persistence.cpp  bf16tce_flash_atten_512_256x64_192_128_varlen_causal.cpp  bf16tce_flash_atten_512_256x64_192_128_varlen_nomask.cpp  e4m3tce_flash_atten_qk_int8_quant_mode_0_512_256x128x128.cpp  e4m3tce_flash_atten_qk_int8_quant_mode_0_512_256x128x128_causal_persistence.cpp  e4m3tce_flash_atten_qk_int8_quant_mode_0_512_256x128x128_causal_persistence_fp8out.cpp  e4m3tce_flash_atten_qk_int8_quant_mode_0_512_256x128x128_fp8out.cpp  e4m3tce_flash_atten_qk_int8_quant_mode_0_512_256x128x128_kvcache.cpp  e4m3tce_flash_atten_qk_int8_quant_mode_0_512_256x128x128_kvcache_causal_persistence.cpp  e4m3tce_flash_atten_qk_int8_quant_mode_0_512_256x128x128_kvcache_causal_persistence_fp8out.cpp  e4m3tce_flash_atten_qk_int8_quant_mode_0_512_256x128x128_kvcache_fp8out.cpp  e4m3tce_flash_atten_qk_int8_quant_mode_1_512_256x128x128.cpp  e4m3tce_flash_atten_qk_int8_quant_mode_1_512_256x128x128_causal_persistence.cpp  e4m3tce_flash_atten_qk_int8_quant_mode_1_512_256x128x128_causal_persistence_fp8out.cpp  e4m3tce_flash_atten_qk_int8_quant_mode_1_512_256x128x128_fp8out.cpp  e4m3tce_flash_atten_qk_int8_quant_mode_1_512_256x128x128_kvcache.cpp  (+67 more)
docs/: environment_variables.md  flash_attention.md  gdn.md  mate_cli.md
docs/source/: conf.py  index.rst
docs/source/api/: attention.rst  gemm.rst  hyperconnection.rst
include/mate/common/: mma_mp31_sqmma.hpp
mate/: __init__.py  __main__.py  _backend.py  aot.py  api_logging.py  deep_gemm.py  execution_context.py  flashmla.py  gdn_decode.py  gdn_prefill.py  gemm.py  hash_topk.py  hyperconnection.py  mha_interface.py  mla_interface.py  moe_fused_gate.py  sage_attention_interface.py  utils.py  version.py
mate/flashinfer/: __init__.py  gemm.py
mate/gdn_kernels/tilelang/: __init__.py  gdn_chunk_local_cumsum.py  gdn_decode.py  gdn_kkt_solve.py  gdn_l2norm.py  gdn_mtp.py  gdn_prefill.py  gdn_utils.py
mate/hash_topk_kernels/: __init__.py
mate/hash_topk_kernels/tilelang/: __init__.py  hash_topk.py
mate/hyperconnection_kernels/: __init__.py
mate/hyperconnection_kernels/tilelang/: __init__.py  mhc_pre.py
mate/jit/: __init__.py  configs.py  core.py  cpp_ext.py  deep_gemm_attention.py  env.py  flash_attention_ops.py  gemm_ops.py  mla_ops.py  moe_fused_gate.py  runtime.py  sage_attention.py  utils.py
mate/jit/attention/: __init__.py  attention_utils.py
mate/jit/gemm/: __init__.py  gemm_utils.py
mate/sparse_mla/: flashmla_checks.py  flashmla_sparse.py
mate/sparse_mla/tilelang/: sparse_mla_decode.py  sparse_mla_decode_fwd_scheduled.py  sparse_mla_fwd_pipelined.py  sparse_mla_model1_decode_fwd_scheduled.py  sparse_mla_model1_fwd_pipelined.py  sparse_mla_prefill.py  sparse_mla_v32_decode_fwd_scheduled.py  sparse_mla_v32_fwd_pipelined.py
mate/testing/: __init__.py  arch.py  flash_attn.py  sage_attention_quantization.py  sparse_mla.py  utils.py
tests/: conftest.py  test.sh  test_bmm_fp16.py  test_bmm_fp8.py  test_deep_gemm.py  test_dnn_fmha.py  test_fmha.py  test_fused_moe_gate.py  test_gdn_decode.py  test_gdn_mtp.py  test_gdn_prefill.py  test_gemm.py  test_groupwise_fp8_scaled_gemm.py  test_hash_topk.py  test_hyperconnection.py  test_mla.py  test_sage_attention_interface.py  test_sparse_mla.py
tests/flashinfer/: test_flashinfer_gemm.py
wrappers/DeepGEMM/: README.md  pyproject.toml
wrappers/DeepGEMM/deep_gemm/: __init__.py  interface.py
wrappers/DeepGEMM/deep_gemm/utils/: __init__.py  impl.py  layout.py
wrappers/DeepGEMM/examples/: run_deep_gemm.py
wrappers/FlashMLA/: README.md  pyproject.toml
wrappers/FlashMLA/flash_mla/: __init__.py  flash_mla_interface.py
wrappers/FlashMLA/tests/: sparse_mla_test_utils.py  test_flash_mla_interface.py
wrappers/SageAttention/: README.md  _mate_wrapper_build_backend.py  pyproject.toml
wrappers/SageAttention/sageattention/: __init__.py  interface.py
wrappers/SageAttention/tests/: test_sageattn_interface.py
wrappers/deep_gemm/: README.md  pyproject.toml
wrappers/deep_gemm/deep_gemm/: __init__.py  interface.py
wrappers/deep_gemm/examples/: run_deep_gemm.py
wrappers/flash-attention/: README.md  flash_attn_interface.py  pyproject.toml
wrappers/flash-attention/flash_attn/: __init__.py  interface.py
wrappers/flash-attention/flash_attn_3/: __init__.py  interface.py
wrappers/flash-attention/tests/: test_flash_attn.py
(+440 files in other folders)
