[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deep-gemm"
version = "0.1.3"
description = "A Python wrapper of MATE DeepGEMM"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
  { name = "MATE Team" }
]
keywords = ["musa", "deep-gemm", "gemm", "pytorch", "mate"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "mate>=0.1.3",
]

[project.urls]
Homepage = "https://github.com/MooreThreads/mate"
Repository = "https://github.com/MooreThreads/mate"
Documentation = "https://github.com/MooreThreads/mate/tree/main/wrappers/DeepGEMM"

[tool.setuptools.packages.find]
where = ["."]
include = ["deep_gemm*"]
