[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flash_mla"
version = "0.1.0"
description = "A Python wrapper of MATE MLA with the FlashMLA package surface"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
  { name = "MATE Team" }
]
keywords = ["musa", "flash-mla", "mla", "attention", "pytorch", "mate"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "mate>=0.2.0",
]

[project.urls]
Homepage = "https://github.com/MooreThreads/mate"
Repository = "https://github.com/MooreThreads/mate"
Documentation = "https://github.com/MooreThreads/mate/tree/main/wrappers/FlashMLA"

[tool.setuptools.packages.find]
where = ["."]
include = ["flash_mla*"]
