[build-system]
requires = ["setuptools>=77", "packaging>=24", "mate>=0.1.1"]
build-backend = "setuptools.build_meta"

[project]
name = "mate-flash-attention"
version = "0.1.3"
description = "A Python wrapper of MATE-FMHA to support Flash Attention 3"
requires-python = ">=3.10"
authors = [
  { name = "MATE Team" }
]
