[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flash_attn_3"
version = "0.1.4"
description = "A Python wrapper of MATE-FMHA to support Flash Attention 3"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
  { name = "MATE Team" }
]
keywords = ["musa", "flash-attention", "attention", "pytorch", "mate"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "mate>=0.1.3",
]

[project.urls]
Homepage = "https://github.com/MooreThreads/mate"
Repository = "https://github.com/MooreThreads/mate"
Documentation = "https://github.com/MooreThreads/mate/tree/main/wrappers/flash-attention"

[tool.setuptools]
py-modules = ["flash_attn_interface"]


[tool.setuptools.packages.find]
where = ["."]
include = ["flash_attn_3*"]
